# study

basic_linux_study-main/1st/: Makefile  main.c  solution.c  temp.c
basic_linux_study-main/2st/2.4st/: main.c
basic_linux_study-main/3st/3.1st/: solution.c
basic_linux_study-main/3st/3.2st/: solution.c
basic_linux_study-main/3st/3.3st/: solution.c
basic_linux_study-main/3st/3.4st/: solution.c
basic_linux_study-main/3st/3.5st/: solution.c
basic_linux_study-main/4st/4.1st/: solution.c  test.c
basic_linux_study-main/4st/4.2st/: solution.c  stream.c
basic_linux_study-main/4st/4.3st/: solution.c
basic_linux_study-main/4st/4.4st/: solution.c
basic_linux_study-main/4st/4.5st/: solution.c  temp.c
basic_linux_study-main/5st/5.1st/: solution.c
basic_linux_study-main/5st/5.2st/: solution.c
basic_linux_study-main/5st/5.3st/: solution.c
itmo_cpp_algos/labaratory_work_1/: CMakeLists.txt  Game.cpp  GameSaver.cpp  GameSaver.h  GameStructure.h  MenuHelper.cpp  MenuHelper.h
itmo_cpp_algos/labaratory_work_2/: .gitignore  Array.h  CMakeLists.txt  main.cpp
itmo_cpp_algos/labaratory_work_3/: .gitmodules  Benchmark.cpp  CMakeLists.txt  SortAlgo.h  results.csv  results_classic_quick_sort.csv
itmo_cpp_algos/labaratory_work_3/test/: main.cpp
